Complete remake of the entire webpage

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,30 @@
-.bg-black {
-  background-color: rgb(0, 0, 0);
+.bg-0 {
+  background-color: #f4faff;
 }
-.bg-blue {
-  background-color: rgb(39, 60, 70);
+.bg-1 {
+  background-color: #08090a;
 }
-.bg-red {
-  background-color: rgb(163, 34, 33);
+.bg-2 {
+  background-color: #5465ff;
+}
+
+.btn-bg-0,
+.btn-bg-0:hover,
+.btn-bg-0:active,
+.btn-bg-0:visited {
+  background-color: #f4faff !important;
+  border-color: #f4faff !important;
+}
+.btn-bg-1,
+.btn-bg-1:hover,
+.btn-bg-1:active,
+.btn-bg-1:visited {
+  background-color: #08090a !important;
+  border-color: #08090a !important;
+}
+
+button:hover,
+button:active,
+button:visited {
+  opacity: 0.9 !important;
 }
